<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="input_view">Input View</string>
    <string name="map_view">Map View</string>
    <string name="test_firebase">Test Firebase</string>
    <string name="temperature">Temperature</string>
    <string name="barometric_pressure">Barometric Pressure</string>
    <string name="weather_conditions">Weather Conditions</string>
    <string name="get_temperature">Get Temperature</string>
    <string name="get_pressure">Get Pressure</string>
    <string name="submit">Submit</string>
    <string name="location">Location</string>
    <string name="get_location">Get Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="_0">0</string>
    <string name="Celsius">Celsius</string>
    <string name="NoTemperature">Unable to find temperature.</string>
    <string name="NoPressure">Unable to find pressure</string>
    <string name="NoLongitude">Unable to find location</string>
    <string name="NoLatitude">Unable to find location</string>
    <string name="mb">mb</string>
    <string name="upload_and_view_local_weather">Upload and view local weather.</string>
    <string name="weather_watch">Weather Watch</string>
    <string name="upload_and_view_your_local_weather">Upload and view your local weather.</string>
    <string name="n_a">N/A</string>
    <string name="get_data">Get Data</string>
    <string name="upload">Upload</string>
    <string-array name="weather_array">
        <item></item>
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Windy</item>
        <item>Rainy</item>
        <item>Snowy</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
