<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sal.weatherapp.MainActivity$PlaceholderFragment">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#0097A7"
            android:orientation="horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/logofont"
                android:text="@string/weather_watch"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/section_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginVertical="0dp"
                android:fontFamily="@font/maintext"
                android:text="@string/upload_and_view_local_weather"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_rowWeight="1"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/temperature"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintTop_creator="1"
                    android:fontFamily="@font/maintext"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#212121"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:layout_rowWeight="1"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/barometric_pressure"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintTop_creator="1"
                    android:fontFamily="@font/maintext"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#212121"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10dp"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/textViewWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/weather_conditions"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintTop_creator="1"
                    android:fontFamily="@font/maintext"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#212121"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10dp"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/location"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintTop_creator="1"
                    android:fontFamily="@font/maintext"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#212121"/>
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#0097A7"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>